Fixed Firefox Wrapper Overflow Issue
Wrapper had weird overflow issues on Firefox? This fixes it.

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ a {
 
 .wrapper {
   overflow-x: hidden;
+  overflow-y: hidden;
   display: grid;
   grid-template-rows: 3em auto 1fr 3em;
   grid-template-areas:
